SFDCProject/src/objects/CustomLookup__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 3) AND (2 OR 4)</booleanFilter>
            <filterItems>
                <field>Account.Account_Type__c</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Account.Account_Type__c</field>
                <operation>equals</operation>
                <value>Company</value>
            </filterItems>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>startsWith</operation>
                <value>0016000000Noqv7</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CustomLookup</relationshipLabel>
        <relationshipName>CustomLookup</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CustomLookup</relationshipLabel>
        <relationshipName>CustomLookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>CustomLookup</relationshipLabel>
        <relationshipName>CustomLookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Contact_Type__c</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CustomLookup (Partner Contact)</relationshipLabel>
        <relationshipName>CustomLookup1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>CustomLookup</relationshipLabel>
        <relationshipName>CustomLookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal</label>
        <referenceTo>Proposal__c</referenceTo>
        <relationshipLabel>CustomLookup</relationshipLabel>
        <relationshipName>CustomLookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CustomLookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CustomLookup</label>
    <nameField>
        <label>CustomLookUp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLookup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>